# atrax

./: .coverage  .gitignore  README.md  SeriesPoc.ipynb  playground.ipynb  pyproject.toml  sales.csv  sales_multi_store.csv  test_data.py
atrax/: Atrax.py  __init__.py
atrax/Dataset/: dataset.py  group.py  indexers.py
atrax/Series/: indexers.py  series.py
atrax/core/: __init__.py  customdatetime.py  cut.py  dataset.py  group.py  locators.py  metrics.py  rolling.py  series.py
atrax/utils/: __init__.py  date_accessor.py  date_fns.py
core/: group.py  locators.py
docs/: atrax.html  index.html  search.js
docs/atrax/: Dataset.html  Series.html  core.html  version.html
docs/atrax/Dataset/: dataset.html  (+2 more)
old_tes_cases/: test_qcut.py  test_rolling.py  test_series_map.py
tests/: test_cut.py  test_dataset.py  test_datetime.py  test_groupby.py  test_series.py
tests/dataset/: test_dataset.py  test_dataset_drop.py  test_dataset_dropna.py  test_dataset_fillna_isna.py  test_dataset_getitem.py  test_dataset_groupby.py  test_dataset_indexers.py  test_dataset_mean.py  test_dataset_rename.py  test_dataset_reset_index.py  test_dataset_set_index.py  test_dataset_setitem.py  test_dataset_setitem_indexer.py  test_sort_values.py  test_stats.py  west-weird_dataset_set_index.py
tests/other/: test_data_accessor.py  test_date_range.py  test_read_csv.py  test_to_datetime.py
tests/series/: test_apply.py  test_astype.py  test_chaining.py  test_comparisons.py  test_indexers.py  test_map.py  test_math.py  test_series.py  test_series_math.py  test_series_shift.py  test_unique.py
(+11 files in other folders)
