[project]
name = "atrax"
version = "0.1.0"
description = "A pandas-like library for tabular and time series data."
authors = [
    { name="Your Name", email="you@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = """
    --cov=atrax 
    --cov-report=term-missing 
    --cov-report=html 
    --cov-fail-under=10 
    -v
"""